[gd_scene load_steps=4 format=3 uid="uid://d3datfnbmaa2m"]

[ext_resource type="Script" path="res://MENU/MainMenu.gd" id="1_613j1"]
[ext_resource type="Texture2D" uid="uid://th64bwauop8n" path="res://CMP source/map/back/ruin.png" id="2_byfxb"]

[sub_resource type="SystemFont" id="SystemFont_4r0ck"]
font_names = PackedStringArray("Impact")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 553.0
offset_top = 386.0
offset_right = 553.0
offset_bottom = 386.0
script = ExtResource("1_613j1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -638.0
offset_top = -386.0
offset_right = 642.0
offset_bottom = 262.0
texture = ExtResource("2_byfxb")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -435.0
offset_top = -192.0
offset_right = 453.0
offset_bottom = -91.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("SystemFont_4r0ck")
theme_override_font_sizes/font_size = 64
text = "Chicken Soul"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -40.0
offset_right = 81.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "options"

[node name="Credit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credit
"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(7, -53)
zoom = Vector2(0.5, 0.5)

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credit" to="." method="_on_credit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
